# wasm-license-decoder

./: Cargo.toml  readme.md
src/: drivers_license.rs  lib.rs  vehicle_license.rs
