[package]
name = "wasm-license-decoder"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "0.2"
num-bigint-dig = "0.8.4"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
getrandom = { version = "0.2", features = ["js"] }
rsa = { version = "0.9", features = ["sha2"] }
pkcs1 = "0.7.5"
pem = "3.0.5"
serde-wasm-bindgen = "0.6.5"
